Added: * Google analystics tracking * Added information to say that analytics are used in the site * removed the 'this is the footer' text in the footer

--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,8 @@ body {
 <br>
 <br>
 <center> 
-<p>This is the footer. Planning for Calm. Naomi Clark, 2016.</p>
+<p>Planning for Calm. 2016.</p>
+<p>Analytics are used to enhance user experience and develop more useful resources.</p>
 </center>
 
 </body>
